Bug 275425 - kdev-python crashes
Summary: kdev-python crashes
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: 1.2.60
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: 1.2.0
Assignee: Sven Brauch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-11 20:29 UTC by Theo Chatzimichos
Modified: 2011-06-12 16:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Theo Chatzimichos 2011-06-11 20:29:40 UTC
Application: kdevelop (4.2.60)
KDE Platform Version: 4.6.3 (4.6.3)
Qt Version: 4.7.3
Operating System: Linux 2.6.38-gentoo-r5 x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:

import django.
when I type this, I immediatelly get a crash. KDE is 4.6.3, kdevelop/kdevplatform/kdevelop-pg-qt/kdev-python that are compiled from master

The crash can be reproduced every time.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
	in ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
[Current thread is 1 (Thread 0x7fbb0290f760 (LWP 12355))]

Thread 9 (Thread 0x7fbaeb32b700 (LWP 12356)):
#0  pthread_cond_timedwait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:216
#1  0x00007fbb00de7541 in wait (this=<value optimized out>, mutex=0x15939d0, time=1000) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x15939d0, time=1000) at thread/qwaitcondition_unix.cpp:160
#3  0x00007fbafd1fd7aa in KDevelop::DUChainPrivate::CleanupThread::run (this=0x15939b0) at /var/tmp/portage/dev-util/kdevplatform-9999/work/kdevplatform-9999/language/duchain/duchain.cpp:286
#4  0x00007fbb00de6ef5 in QThreadPrivate::start (arg=0x15939b0) at thread/qthread_unix.cpp:320
#5  0x00007fbaff842d4c in start_thread (arg=0x7fbaeb32b700) at pthread_create.c:301
#6  0x00007fbaffb3040d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 8 (Thread 0x7fbaddc0f700 (LWP 12378)):
#0  __libc_enable_asynccancel () at ../nptl/sysdeps/unix/sysv/linux/x86_64/cancellation.S:66
#1  0x00007fbaffb275c8 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:85
#2  0x00007fbafa65b91d in g_main_context_poll (context=0x2408e30, block=1, dispatch=1, self=<value optimized out>) at gmain.c:3404
#3  g_main_context_iterate (context=0x2408e30, block=1, dispatch=1, self=<value optimized out>) at gmain.c:3086
#4  0x00007fbafa65be4d in g_main_context_iteration (context=0x2408e30, may_block=1) at gmain.c:3154
#5  0x00007fbb00ef9e96 in QEventDispatcherGlib::processEvents (this=0x2408ab0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00007fbb00ece322 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007fbb00ece564 in QEventLoop::exec (this=0x7fbaddc0ede0, flags=...) at kernel/qeventloop.cpp:201
#8  0x00007fbb00de46a4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#9  0x00007fbb00eaff08 in QInotifyFileSystemWatcherEngine::run (this=0x2408390) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007fbb00de6ef5 in QThreadPrivate::start (arg=0x2408390) at thread/qthread_unix.cpp:320
#11 0x00007fbaff842d4c in start_thread (arg=0x7fbaddc0f700) at pthread_create.c:301
#12 0x00007fbaffb3040d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 7 (Thread 0x7fbadcc0d700 (LWP 12536)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbaf77b68d4 in scavengerThread (context=0x7fbaf7fbbba0) at wtf/FastMalloc.cpp:2378
#2  WTF::TCMalloc_PageHeap::runScavengerThread (context=0x7fbaf7fbbba0) at wtf/FastMalloc.cpp:1497
#3  0x00007fbaff842d4c in start_thread (arg=0x7fbadcc0d700) at pthread_create.c:301
#4  0x00007fbaffb3040d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 6 (Thread 0x7fbad498a700 (LWP 12766)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbb00de75db in wait (this=<value optimized out>, mutex=0x3156d20, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x3156d20, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007fbaf7fe9914 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x3583830, th=0x30e8f70) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fbaf7febfa3 in ThreadWeaver::WorkingHardState::applyForWork (this=0x31483f0, th=0x30e8f70) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007fbaf7fead8f in ThreadWeaver::ThreadRunHelper::run (this=0x7fbad4989e30, parent=0x3583830, th=0x30e8f70) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/Thread.cpp:87
#6  0x00007fbaf7feae18 in ThreadWeaver::Thread::run (this=0x30e8f70) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/Thread.cpp:142
#7  0x00007fbb00de6ef5 in QThreadPrivate::start (arg=0x30e8f70) at thread/qthread_unix.cpp:320
#8  0x00007fbaff842d4c in start_thread (arg=0x7fbad498a700) at pthread_create.c:301
#9  0x00007fbaffb3040d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 5 (Thread 0x7fbad3501700 (LWP 12767)):
[KCrash Handler]
#6  0x00007fbb00e313d0 in QString::replace (this=0x7fbae4af6ed0, before=0x7fbae4b5685a, blen=1, after=0x7fbb012018da, alen=0, cs=Qt::CaseSensitive) at tools/qstring.cpp:1912
#7  0x00007fbad3d65a8c in Python::PythonCodeCompletionContext::PythonCodeCompletionContext (this=<value optimized out>, context=<value optimized out>, text=<value optimized out>, position=<value optimized out>, depth=<value optimized out>, parent=<value optimized out>) at /var/tmp/portage/dev-util/kdevelop-python-9999/work/kdevelop-python-9999/codecompletion/pythoncodecompletioncontext.cpp:522
#8  0x00007fbad3d708e7 in Python::PythonCodeCompletionWorker::createCompletionContext (this=0x252ad50, context=<value optimized out>, contextText=..., position=...) at /var/tmp/portage/dev-util/kdevelop-python-9999/work/kdevelop-python-9999/codecompletion/pythoncodecompletionworker.cpp:36
#9  0x00007fbafd2f843d in KDevelop::CodeCompletionWorker::computeCompletions (this=0x252ad50, context=..., position=..., followingText=..., contextRange=<value optimized out>, contextText=...) at /var/tmp/portage/dev-util/kdevplatform-9999/work/kdevplatform-9999/language/codecompletion/codecompletionworker.cpp:152
#10 0x00007fbafd2f7eca in KDevelop::CodeCompletionWorker::computeCompletions (this=0x252ad50, context=..., position=..., view=<value optimized out>) at /var/tmp/portage/dev-util/kdevplatform-9999/work/kdevplatform-9999/language/codecompletion/codecompletionworker.cpp:128
#11 0x00007fbafd2f8354 in KDevelop::CodeCompletionWorker::qt_metacall (this=0x252ad50, _c=<value optimized out>, _id=<value optimized out>, _a=0x315bbf0) at /var/tmp/portage/dev-util/kdevplatform-9999/work/kdevplatform-9999_build/language/codecompletionworker.moc:84
#12 0x00007fbb00ee313a in QObject::event (this=0x252ad50, e=<value optimized out>) at kernel/qobject.cpp:1217
#13 0x00007fbb002b6334 in QApplicationPrivate::notify_helper (this=0x641f60, receiver=0x252ad50, e=0x316b430) at kernel/qapplication.cpp:4462
#14 0x00007fbb002baeba in QApplication::notify (this=<value optimized out>, receiver=0x252ad50, e=0x316b430) at kernel/qapplication.cpp:4341
#15 0x00007fbb016ced86 in KApplication::notify (this=0x7fff4dc91f80, receiver=0x252ad50, event=0x316b430) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/kdeui/kernel/kapplication.cpp:311
#16 0x00007fbb00ecef5b in QCoreApplication::notifyInternal (this=0x7fff4dc91f80, receiver=0x252ad50, event=0x316b430) at kernel/qcoreapplication.cpp:731
#17 0x00007fbb00ed2714 in sendEvent (receiver=0x0, event_type=0, data=0x31891a0) at kernel/qcoreapplication.h:215
#18 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x31891a0) at kernel/qcoreapplication.cpp:1372
#19 0x00007fbb00ef9ca3 in sendPostedEvents (s=<value optimized out>) at kernel/qcoreapplication.h:220
#20 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#21 0x00007fbafa65b3ce in g_main_dispatch (context=0x318aa20) at gmain.c:2440
#22 g_main_context_dispatch (context=0x318aa20) at gmain.c:3013
#23 0x00007fbafa65bbb8 in g_main_context_iterate (context=0x318aa20, block=1, dispatch=1, self=<value optimized out>) at gmain.c:3091
#24 0x00007fbafa65be4d in g_main_context_iteration (context=0x318aa20, may_block=1) at gmain.c:3154
#25 0x00007fbb00ef9e3f in QEventDispatcherGlib::processEvents (this=0x31ad770, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#26 0x00007fbb00ece322 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#27 0x00007fbb00ece564 in QEventLoop::exec (this=0x7fbad3500e20, flags=...) at kernel/qeventloop.cpp:201
#28 0x00007fbb00de46a4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#29 0x00007fbb00de6ef5 in QThreadPrivate::start (arg=0x7dcc80) at thread/qthread_unix.cpp:320
#30 0x00007fbaff842d4c in start_thread (arg=0x7fbad3501700) at pthread_create.c:301
#31 0x00007fbaffb3040d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 4 (Thread 0x7fbad2d00700 (LWP 12768)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbb00de75db in wait (this=<value optimized out>, mutex=0xa59bf0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0xa59bf0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007fbaf7fe9914 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0xaa8090, th=0x345b8a0) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fbaf7febfa3 in ThreadWeaver::WorkingHardState::applyForWork (this=0x82ec10, th=0x345b8a0) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007fbaf7fead8f in ThreadWeaver::ThreadRunHelper::run (this=0x7fbad2cffe30, parent=0xaa8090, th=0x345b8a0) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/Thread.cpp:87
#6  0x00007fbaf7feae18 in ThreadWeaver::Thread::run (this=0x345b8a0) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/Thread.cpp:142
#7  0x00007fbb00de6ef5 in QThreadPrivate::start (arg=0x345b8a0) at thread/qthread_unix.cpp:320
#8  0x00007fbaff842d4c in start_thread (arg=0x7fbad2d00700) at pthread_create.c:301
#9  0x00007fbaffb3040d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 3 (Thread 0x7fbad24ff700 (LWP 12769)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbb00de75db in wait (this=<value optimized out>, mutex=0xa59bf0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0xa59bf0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007fbaf7fe9914 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0xaa8090, th=0x1f58510) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fbaf7febfa3 in ThreadWeaver::WorkingHardState::applyForWork (this=0x82ec10, th=0x1f58510) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007fbaf7febfbc in ThreadWeaver::WorkingHardState::applyForWork (this=0x82ec10, th=0x1f58510) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007fbaf7fead8f in ThreadWeaver::ThreadRunHelper::run (this=0x7fbad24fee30, parent=0xaa8090, th=0x1f58510) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/Thread.cpp:87
#7  0x00007fbaf7feae18 in ThreadWeaver::Thread::run (this=0x1f58510) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/threadweaver/Weaver/Thread.cpp:142
#8  0x00007fbb00de6ef5 in QThreadPrivate::start (arg=0x1f58510) at thread/qthread_unix.cpp:320
#9  0x00007fbaff842d4c in start_thread (arg=0x7fbad24ff700) at pthread_create.c:301
#10 0x00007fbaffb3040d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 2 (Thread 0x7fbad1cfe700 (LWP 12770)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbaebccfcf4 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7fbaebfe8180) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00007fbaebccfd29 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x7fbaebff6254) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00007fbaff842d4c in start_thread (arg=0x7fbad1cfe700) at pthread_create.c:301
#4  0x00007fbaffb3040d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7fbb0290f760 (LWP 12355)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbb00de75db in wait (this=<value optimized out>, mutex=0x24084c0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x24084c0, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007fbb00de66a1 in QThread::wait (this=<value optimized out>, time=18446744073709551615) at thread/qthread_unix.cpp:722
#4  0x00007fbb00ea3870 in QFileSystemWatcher::~QFileSystemWatcher (this=<value optimized out>, __in_chrg=<value optimized out>) at io/qfilesystemwatcher.cpp:446
#5  0x00007fbb00ea3949 in QFileSystemWatcher::~QFileSystemWatcher (this=0x24081f0, __in_chrg=<value optimized out>) at io/qfilesystemwatcher.cpp:462
#6  0x00007fbb00ee1864 in QObjectPrivate::deleteChildren (this=0x2408150) at kernel/qobject.cpp:1955
#7  0x00007fbb00ee6352 in QObject::~QObject (this=0x24083d0, __in_chrg=<value optimized out>) at kernel/qobject.cpp:946
#8  0x00007fbaf8b19b49 in Solid::Backends::Fstab::FstabWatcher::~FstabWatcher (this=0x24083d0, __in_chrg=<value optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/solid/solid/backends/fstab/fstabwatcher.cpp:51
#9  0x00007fbaffa8e521 in __run_exit_handlers (status=1, listp=0x7fbaffddf4c8, run_list_atexit=true) at exit.c:78
#10 0x00007fbaffa8e575 in exit (status=37782956) at exit.c:100
#11 0x00007fbb00322d48 in qt_xio_errhandler () at kernel/qapplication_x11.cpp:772
#12 0x00007fbb016cdb38 in KApplication::xioErrhandler (this=0x7fff4dc91f80, dpy=0x64a8f0) at /var/tmp/portage/kde-base/kdelibs-4.6.3-r1/work/kdelibs-4.6.3/kdeui/kernel/kapplication.cpp:419
#13 0x00007fbafbf17f0e in _XIOError (dpy=0x64a8f0) at /var/tmp/portage/x11-libs/libX11-1.4.3/work/libX11-1.4.3/src/XlibInt.c:1618
#14 0x00007fbafbf157cd in _XEventsQueued (dpy=0x64a8f0, mode=<value optimized out>) at /var/tmp/portage/x11-libs/libX11-1.4.3/work/libX11-1.4.3/src/xcb_io.c:307
#15 0x00007fbafbf0616f in XEventsQueued (dpy=0x64a8f0, mode=2) at /var/tmp/portage/x11-libs/libX11-1.4.3/work/libX11-1.4.3/src/Pending.c:43
#16 0x00007fbb0035c36c in x11EventSourceCheck (s=0x646230) at kernel/qguieventdispatcher_glib.cpp:85
#17 0x00007fbafa65b02e in g_main_context_check (context=0x6450e0, max_priority=2147483647, fds=<value optimized out>, n_fds=<value optimized out>) at gmain.c:2961
#18 0x00007fbafa65b93a in g_main_context_iterate (context=0x6450e0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:3088
#19 0x00007fbafa65be4d in g_main_context_iteration (context=0x6450e0, may_block=1) at gmain.c:3154
#20 0x00007fbb00ef9e3f in QEventDispatcherGlib::processEvents (this=0x619a20, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#21 0x00007fbb0035c51e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#22 0x00007fbb00ece322 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#23 0x00007fbb00ece564 in QEventLoop::exec (this=0x7fff4dc91c40, flags=...) at kernel/qeventloop.cpp:201
#24 0x00007fbb00ed29cb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#25 0x000000000040c0d4 in main (argc=<value optimized out>, argv=0x7fff4dc93eb8) at /var/tmp/portage/dev-util/kdevelop-9999/work/kdevelop-9999/app/main.cpp:474

Reported using DrKonqi
Comment 1 Milian Wolff 2011-06-12 00:23:24 UTC
if it's reproducible, running kdev through valgrind and reproducing the crash is immensely useful:

valgrind --track-origins=yes --num-callers=25 kdevelop
Comment 2 Sven Brauch 2011-06-12 16:56:28 UTC
Fixed in commit e252b43, just a typo. Thanks for reporting.