Fix crash for "import foo." autocompletion

just a simple stupid offset error; semantic completion still isn't
implemented, it'll only list subdirectories / files, sorry :)
BUG:275425